# pgshard

./: .dockerignore  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  buf.yaml  deny.toml  rustfmt.toml
.github/: dependabot.yml  pull_request_template.md
.github/scripts/: ci-diff-base.sh
.github/workflows/: ci.yml  dependabot-automerge.yml  release.yml
contracts/: http-endpoints-v1.json  replication-slot-names.json
crates/pgshard-agent/: Cargo.toml
crates/pgshard-agent/src/: boottime.rs  catalog_activation.rs  catalog_activation_consumer.rs  catalog_activation_tls.rs  config.rs  coordination.rs  domain.rs  http.rs  lib.rs  main.rs  postgres.rs  postgres_fence.rs  postgres_generation.rs  postgres_recovery.rs  postgres_replication.rs  telemetry.rs  writable.rs
crates/pgshard-agent/tests/: linux_process.rs  postgres18_generation.sh
crates/pgshard-catalog/: Cargo.toml  README.md
crates/pgshard-catalog/migrations/: 0001_shardschema.sql
crates/pgshard-catalog/src/: cache.rs  driver.rs  lib.rs  loader.rs  model.rs  operation.rs  supervisor.rs
crates/pgshard-catalog/tests/: postgres18.rs
crates/pgshard-catalog/tests/support/: commit_response_proxy.rs
crates/pgshard-e2e/: Cargo.toml
crates/pgshard-e2e/src/: main.rs
crates/pgshard-integration-tests/: Cargo.toml  README.md
crates/pgshard-integration-tests/src/: main.rs
crates/pgshard-orch/: Cargo.toml
crates/pgshard-orch/src/: agent_status.rs  boottime.rs  catalog_activation_challenge.rs  catalog_activation_live_objects.rs  catalog_activation_publisher.rs  catalog_activation_supervisor.rs  catalog_candidate.rs  catalog_materialization.rs  config.rs  coordination.rs  domain.rs  endpoint.rs  etcd_data.rs  http.rs  identity_binding.rs  lib.rs  main.rs  postgres_connection.rs  slot_catalog.rs  slot_mutator.rs  slot_observer.rs  slot_probe_catalog.rs  standby_slots.rs  telemetry.rs  topology.rs
crates/pgshard-orch/src/slot_observer/: correlation.rs
crates/pgshard-orch/tests/: etcd_coordination.rs  postgres18_catalog.rs  postgres18_slots.rs  shutdown.rs  topology_file.rs
crates/pgshard-pgwire/: Cargo.toml  README.md
crates/pgshard-pgwire/benches/: decode_bind.rs  decode_frontend.rs  decode_pgoutput_control.rs  decode_pgoutput_insert.rs  decode_pgoutput_message.rs  decode_pgoutput_relation.rs
crates/pgshard-pgwire/fuzz/: Cargo.toml
crates/pgshard-pgwire/fuzz/corpus/decode_backend/: valid_parameter_description  valid_protocol_negotiation
crates/pgshard-pgwire/fuzz/corpus/decode_frontend/: valid_bind  valid_parse  valid_sasl_initial
crates/pgshard-pgwire/fuzz/corpus/decode_startup/: valid_parameters
crates/pgshard-pgwire/fuzz/corpus/pgoutput_decoder/: valid_insert  valid_logical_message  valid_parallel_abort  valid_prepare  valid_relation  valid_stream_commit  valid_stream_sequence  valid_truncate  valid_update
crates/pgshard-pgwire/fuzz/fuzz_targets/: decode_backend.rs  decode_frontend.rs  decode_startup.rs  pgoutput_decoder.rs
crates/pgshard-pgwire/src/: backend.rs  encode.rs  lib.rs  messages.rs  pgoutput.rs  session.rs  startup_encode.rs
crates/pgshard-pgwire/tests/: backend_encoding.rs  error_response.rs  postgres18.rs  sasl.rs  startup_encoding.rs
crates/pgshard-planner/: Cargo.toml  README.md
crates/pgshard-planner/benches/: analyze_parameter_route.rs  parse_statement.rs
crates/pgshard-planner/src/: lib.rs
crates/pgshard-planner/tests/: log_redaction.rs  postgres18.rs
crates/pgshard-pooler/: Cargo.toml  README.md
crates/pgshard-pooler/src/: config.rs  frontend.rs  http.rs  lib.rs  main.rs  runtime.rs  server.rs  state.rs
crates/pgshard-pooler/tests/: linux_process.rs
crates/pgshard-release/: Cargo.toml  RELEASE_START
crates/pgshard-release/src/: main.rs
crates/pgshard-release/tests/: audit_history.rs  ci_diff_base.rs
crates/pgshard-router/: Cargo.toml  README.md
crates/pgshard-router/benches/: route_bound_parameter.rs
crates/pgshard-router/src/: lib.rs
crates/pgshard-types/: Cargo.toml
crates/pgshard-types/benches/: routing_hash.rs
crates/pgshard-types/src/: catalog_activation.rs  catalog_material.rs  lib.rs  restore.rs  writable_generation.rs
crates/pgshard-version/: Cargo.toml  build.rs
crates/pgshard-version/src/: lib.rs
deploy/: README.md  docker-bake.hcl
deploy/images/: operator.Dockerfile  quarantine.pg_hba.conf  replication-bootstrap-primary.pg_hba.conf  rust.Dockerfile
extensions/pgshard_fence/: Makefile  README.md  pgshard_fence--1.0.sql  pgshard_fence.c  pgshard_fence.control  test.sh
operator/: README.md  go.mod  go.sum
operator/api/v1alpha1/: development_sample_test.go  generated_crd_test.go  groupversion_info.go  pgshardcatalogactivation_types.go  pgshardcatalogactivation_webhook.go  pgshardcatalogactivation_webhook_test.go  pgshardcluster_types.go  pgshardcluster_webhook.go  pgshardcluster_webhook_test.go  pgshardrestore_types.go  pgshardrestore_webhook.go  pgshardrestore_webhook_test.go  zz_generated.deepcopy.go
operator/cmd/manager/: main.go  main_test.go
operator/config/admission/: kustomization.yaml  manager_patch.yaml  validatingadmissionpolicy_tokenrequest.yaml
operator/config/crd/: kustomization.yaml
operator/config/development/: kustomization.yaml
operator/config/manager/: deployment.yaml  kustomization.yaml
operator/config/namespace/: namespace.yaml
operator/config/rbac/: kustomization.yaml  leader_election_role.yaml  role.yaml
operator/config/samples/: pgshard_v1alpha1_development.yaml  pgshard_v1alpha1_pgshardcluster.yaml  pgshard_v1alpha1_single_member.yaml
operator/config/webhook/: ca_secret.yaml  fencing_key_secret.yaml  kustomization.yaml  manifests.yaml  mutating_selectors_patch.yaml  service.yaml  serving_secret.yaml  (+1 more)
patches/postgresql/: f5cc81719e6da4cbdb1f797c48b693e91018153a-pgshard-fence.patch
plan/: README.md  milestone-1.md
tests/e2e/: README.md
website/: .gitignore  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tsconfig.json
website/docs/: overview.md  quickstart.md
(+86 files in other folders)
