[workspace]
members = [
  "crates/pgshard-agent",
  "crates/pgshard-orch",
  "crates/pgshard-release",
  "crates/pgshard-types",
  "crates/pgshard-version",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
license = "Apache-2.0"
repository = "https://github.com/andrew01234567890/pgshard"

[workspace.dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
clap = { version = "4.5.41", features = ["derive"] }
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
url = "2.5.4"
xxhash-rust = { version = "=0.8.16", features = ["xxh3"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
