[workspace]
members = [
  "crates/pgshard-agent",
  "crates/pgshard-catalog",
  "crates/pgshard-orch",
  "crates/pgshard-pooler",
  "crates/pgshard-pgwire",
  "crates/pgshard-planner",
  "crates/pgshard-router",
  "crates/pgshard-release",
  "crates/pgshard-types",
  "crates/pgshard-version",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
license = "Apache-2.0"
repository = "https://github.com/andrew01234567890/pgshard"

[workspace.dependencies]
anyhow = "1.0.98"
arc-swap = "1.7.1"
axum = "0.8.4"
base64 = "0.22.1"
blake3 = "1.8.2"
bytes = "1.12.1"
clap = { version = "4.5.41", features = ["derive"] }
hyper = { version = "1.10.0", features = ["http1", "server"] }
http-body-util = "0.1.3"
hyper-util = { version = "0.1.20", features = ["client", "client-legacy", "http1", "service", "tokio"] }
hickory-resolver = { version = "0.26.1", default-features = false, features = ["system-config", "tokio"] }
hmac = "0.13.0"
k8s-openapi = { version = "0.28.0", default-features = false, features = ["latest"] }
kube = { version = "4.0.0", default-features = false, features = ["client", "ring", "rustls-tls"] }
log = { version = "=0.4.33", features = ["max_level_off", "release_max_level_off"] }
postgres-protocol = "0.6.12"
proptest = { version = "1.11.0", default-features = false, features = ["std"] }
rustix = { version = "1.1.4", features = ["fs", "process", "thread"] }
rustls = { version = "0.23.42", default-features = false, features = ["ring", "std"] }
rustls-pki-types = "1.15.0"
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.11.0"
sqlparser = { version = "=0.62.0", features = ["visitor"] }
stacker = "=0.1.24"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-postgres = "0.7.15"
tokio-postgres-rustls = { version = "0.14.0", default-features = false, features = ["ring"] }
tower = { version = "0.5.2", features = ["util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
url = "2.5.4"
uuid = { version = "1.18.1", features = ["v4"] }
xxhash-rust = { version = "=0.8.16", features = ["xxh3"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
