[package]
name = "pgshard-agent"
description = "PostgreSQL instance agent runtime for pgshard"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
axum.workspace = true
clap = { workspace = true, features = ["env"] }
hyper.workspace = true
hyper-util.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
pgshard-types = { path = "../pgshard-types", version = "=0.1.0" }
pgshard-version = { path = "../pgshard-version", version = "=0.1.0" }
postgres-protocol.workspace = true
rustix.workspace = true
serde.workspace = true
tempfile = "3.27.0"
thiserror.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
