[package]
name = "pgshard-catalog"
description = "Validated shardschema snapshots and lock-free cache for pgshard"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
arc-swap.workspace = true
blake3.workspace = true
pgshard-types = { path = "../pgshard-types", version = "=0.1.0" }
thiserror.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
tracing.workspace = true
uuid.workspace = true

[lints]
workspace = true
