[package]
name = "pgshard-integration-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Entry point for pgshard integration tests that require real services"

[lints]
workspace = true
