[package]
name = "pgshard-orch"
description = "Conservative orchestration runtime foundations for pgshard"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
axum.workspace = true
clap = { workspace = true, features = ["env"] }
pgshard-catalog = { path = "../pgshard-catalog", version = "=0.1.0" }
pgshard-types = { path = "../pgshard-types", version = "=0.1.0" }
pgshard-version = { path = "../pgshard-version", version = "=0.1.0" }
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
bytes.workspace = true
postgres-protocol.workspace = true
serde_json.workspace = true

[lints]
workspace = true
