[package]
name = "pgshard-pgwire"
description = "Bounded PostgreSQL 18 wire framing and logical-replication primitives for pgshard"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
thiserror.workspace = true

[[bench]]
name = "decode_frontend"
harness = false

[[bench]]
name = "decode_bind"
harness = false

[[bench]]
name = "decode_pgoutput_control"
harness = false

[[bench]]
name = "decode_pgoutput_relation"
harness = false

[[bench]]
name = "decode_pgoutput_insert"
harness = false

[[bench]]
name = "decode_pgoutput_message"
harness = false

[lints]
workspace = true
