[package]
name = "pgshard-planner"
description = "Fail-closed SQL planning foundations for pgshard"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
log.workspace = true
pgshard-catalog = { path = "../pgshard-catalog", version = "=0.1.0" }
pgshard-types = { path = "../pgshard-types", version = "=0.1.0" }
sqlparser.workspace = true
stacker.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
tokio-postgres.workspace = true
uuid.workspace = true

[[bench]]
name = "parse_statement"
harness = false

[[bench]]
name = "analyze_parameter_route"
harness = false

[lints]
workspace = true
