[package]
name = "pgshard-pooler"
description = "Fail-closed pooler runtime and shard-zero compatibility relay for pgshard"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
axum.workspace = true
clap = { workspace = true, features = ["env"] }
hickory-resolver.workspace = true
hyper.workspace = true
hyper-util.workspace = true
pgshard-catalog = { path = "../pgshard-catalog", version = "=0.1.0" }
pgshard-pgwire = { path = "../pgshard-pgwire", version = "=0.1.0" }
pgshard-types = { path = "../pgshard-types", version = "=0.1.0" }
pgshard-version = { path = "../pgshard-version", version = "=0.1.0" }
rustix.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
tokio-postgres-rustls.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile = "3.27.0"
tower.workspace = true
uuid.workspace = true

[lints]
workspace = true
