[package]
name = "pgshard-release"
description = "Deterministic SemVer release helper for pgshard"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
