[package]
name = "pgshard-router"
description = "Fail-closed bound-parameter routing core for pgshard"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dev-dependencies]
pgshard-catalog = { path = "../pgshard-catalog", version = "=0.1.0" }
pgshard-pgwire = { path = "../pgshard-pgwire", version = "=0.1.0" }
pgshard-planner = { path = "../pgshard-planner", version = "=0.1.0" }
pgshard-types = { path = "../pgshard-types", version = "=0.1.0" }
thiserror.workspace = true
uuid.workspace = true

[lints]
workspace = true
