[package]
name = "pgshard-types"
description = "Core identifiers and routing primitives for pgshard"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
xxhash-rust.workspace = true

[lints]
workspace = true
